--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,12 +59,18 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: OpenSans
+      fonts:
+        - asset: assets/fontsfonts/OpenSans-Regular.ttf
+        - asset: assets/fontsfonts/OpenSans-Bold.ttf
+          style: 700
+
+    - family: Quicksand
+      fonts:
+        - asset: assets/fontsfonts/Quicksand-Regular.ttf
+        - asset: assets/fontsfonts/Quicksand-Bold.ttf
+          style: 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
