--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,13 +64,12 @@ flutter:
       fonts:
         - asset: assets/fontsfonts/OpenSans-Regular.ttf
         - asset: assets/fontsfonts/OpenSans-Bold.ttf
-          style: 700
-
+          weight: 700
     - family: Quicksand
       fonts:
         - asset: assets/fontsfonts/Quicksand-Regular.ttf
         - asset: assets/fontsfonts/Quicksand-Bold.ttf
-          style: 700
+          weight: 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
